Minor fix to alignment of Zendesk logo for phones

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -130,7 +130,6 @@
             position: absolute;
             top: 4%;
             z-index: 1;
-            display: inline !important;
             stroke: url(#gradient);
 
             .top {
@@ -148,7 +147,8 @@
                     stop-color:rgba(176, 79, 119, 1);
                 }
             }
-              
+            
+  
         } 
     }
 
